--- a/src/Css/selectionPage.css
+++ b/src/Css/selectionPage.css
@@ -17,7 +17,7 @@ select {
 .startquiz-btn {
   padding: 1.5em 4em;
   border: none;
-  border-radius: 10px;
-  background-color: rgb(192, 125, 255);
+  border-radius: var(--border-radius);
+  background-color: var(--btn-bg-color);
   align-self: center;
 }
