--- a/src/Css/results.css
+++ b/src/Css/results.css
@@ -1,17 +1,17 @@
 .good-answer {
   background-color: #94d7a2;
   border: none;
-  color: #293264;
+  color: var(--font-color);
 }
 
 .bad-answer {
   border: none;
-  color: #8589aa;
+  color: var(--results-color);
   background-color: #f8bcbc;
 }
 
 .neutral-answer {
-  border: solid 1px #8589aa;
-  color: #8589aa;
-  background-color: #f5f7fb;
+  border: solid 1px var(--results-color);
+  color: var(--results-color);
+  background-color: var(--neutral-bg-color);
 }
