--- a/src/Css/app.css
+++ b/src/Css/app.css
@@ -40,7 +40,7 @@ hr {
   display: flex;
   flex-direction: column;
   background-color: var(--neutral-bg-color);
-  height: 80%;
+  height: 90%;
   width: 85%;
 }
 
@@ -105,5 +105,12 @@ hr {
     transform: scale(70%);
     bottom: -18px;
     left: -22px;
+  }
+}
+
+@media (width < 425px) {
+  .background {
+    height: 95%;
+    width: 90%;
   }
 }
